--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,30 @@
 <h1>
   {{title}}
 </h1>
+<h2>
+  name: {{name}}
+</h2>
+
+<ul>
+<li *ngFor=" let artist of artists">
+  <h2>Organizer: {{artist.naam}}</h2>
+  <p>department: {{artist.department}}</p>
+  <p> height: {{artist.height}}</p>
+  <p>complexion: {{artist.complexion}}</p>
+</li>
+</ul>
+<table>
+  <thead>
+    <th>Name</th>
+    <th>Index</th>
+    <th>Percent</th>
+    <th>Images</th>
+  </thead>
+  <tbody>
+    <tr *ngFor="let hero of heroes; let i=index; let p=percent">
+      <td>{{hero.name}}</td>
+      <td>{{i}}</td>
+      <td>{{hero.p}}</td>
+      <td><img src="{{hero.img}}"/></td>
+    </tbody>
+  </table>
